--- a/michal-dudzik-pab/projekt2_lepiej/package.json
+++ b/michal-dudzik-pab/projekt2_lepiej/package.json
@@ -24,7 +24,9 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.21",
+    "jsonwebtoken": "^8.5.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
   }
